tests/fixtures/invalid/pow_float_int_str.py
# Cannot call pow() with Float, Int, Str
x = pow(1.0, 1, "hello")
